# server_v2

./: .gitignore  Cargo.toml  swagger.yaml
config/: Database.toml  DatabaseTest.toml
src/: config.rs  course.rs  database.rs  lib.rs  macros.rs  main.rs  resources.rs  util.rs
src/resources/: comment.rs  course.rs  detail.rs  mod.rs  page_option.rs  rate.rs  register_link.rs  session.rs  user.rs
src/util/: config.rs  crypto.rs  database.rs  email_sender.rs  json_response.rs  macros.rs  mod.rs  ops.rs  page_option.rs
tests/: test_user_comment.rs
