[package]
name = "server_v2"
version = "0.1.0"
authors = ["john <799433746@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web-httpauth = "0.4.1"
uuid = "0.8"
hex = "0.2.0"
base64 = "0.12.2"
actix-web = "2.0"
actix-rt = "1.0"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
actix-service = "1.0.0"
bytes = "0.5.2"
futures = "0.3.1"
env_logger = "0.7"
failure = "0.1.8"
lazy_static = "1.4.0"
futures-await-test = "0.3.0"
num_cpus = "1.13.0"
bcrypt = "0.8"
chrono = "0.4"
rand = "0.7.3"
lettre = { version = "0.10.0-alpha.1", default-features = false, features = ["smtp-transport", "builder", "rustls-tls"] }
async-std = "1.5.0"
[dependencies.mongodb]
version = "0.11.0"
default-features = false
features = ["async-std-runtime"]
